--- a/src/Pages/Login-Page/loginCss.module.css
+++ b/src/Pages/Login-Page/loginCss.module.css
@@ -1,5 +1,5 @@
-.container{
-    padding: 0;
+.container {
+  padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -9,56 +9,59 @@
     position: relative;
     border-radius: 0px 0px 50px 50px;
     margin-left: 280px;
-  }
-  .main{
-    background: linear-gradient(170deg,lightblue,rgb(103, 199, 12));;
-    height: 88vh;
-  }
-  .head{
-    text-align: center;
-    margin-top: 40px;
-    position: absolute;
-    margin-left: 200px;
-  }
-  .email{
-    border-radius: 3px;
+    position: relative;
+}
+.container h1{
+  text-align: center;
+  position: absolute;
+  margin-top: 50px;
+  margin-left: 190px;
+}
+.main{
+  background: linear-gradient(170deg,lightblue,rgb(103, 199, 12));;
+  height: 88vh;
+}
+
+.email {
+  border-radius: 3px;
     width: 70%;
     height: 7vh;
-    margin-top: 130px;
+    margin-top: 150px;
     margin-left: 90px;
     position: absolute;
-  }
-  .pass{
-    border-radius: 3px;
-    width:70%;
-    height: 7vh;
-    margin-top: 200px;
-    margin-left: 90px;
-    position: absolute;
-  }
-  .btn{
-    border-radius: 3px;
+}
+.password {
+  border-radius: 3px;
     width: 70%;
     height: 7vh;
-    margin-top: 265px;
-    margin-left:90px;
-    font-size: 20px;
-    font: bold;
-    background: linear-gradient(170deg,lightblue,darkblue);;
-    color: white;
+    margin-top: 225px;
+    margin-left: 90px;
     position: absolute;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  }
-  .check{
-    margin-left: 70px;
-    margin-top: 40px;
-  }
-  .keep{
-    margin-left: 10px;
-  }
-  .forget{
-    margin-left: 200px;
-    position: absolute;
-    margin-top: 50px;
-    color: blue;
-  }
+}
+
+.btn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  cursor: pointer;
+  margin-top: 300px;
+  margin-left: 210px;
+}
+
+.btn:hover {
+  background-color: #45a049;
+}
+
+.createbtn {
+  background-color: #008CBA;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  cursor: pointer;
+}
+
+.createbtn:hover {
+  background-color: #0077a8;
+}
+
